# Graphical_Robot

./: CMakeLists.txt  README.md
include/: Shader.h  camera.h  robot.h  scene.h
resources/shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: Shader.cpp  camera.cpp  main.cpp  robot.cpp  scene.cpp
